--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tanstack/react-query": "^5.12.1",
     "@tanstack/react-table": "^8.10.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "lucide-react": "^0.292.0",
-    "next": "14.0.4-canary.31",
+    "next": "14.0.4-canary.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
@@ -41,6 +43,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
+    "@tanstack/eslint-plugin-query": "^5.12.1",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
