--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.4.1",
     "@faker-js/faker": "^8.3.1",
     "@tanstack/eslint-plugin-query": "^5.12.1",
     "@types/node": "^20.10.0",
