--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
   "semi": false,
-  "trailingComma": "es5",
+  "trailingComma": "all",
   "tabWidth": 2,
   "singleQuote": false,
   "jsxSingleQuote": false,
