--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "eslint": "^8.54.0",
     "eslint-config-next": "14.0.4-canary.9",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
     "postcss": "^8.4.31",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
