--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.11",
     "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
+    "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.2",
-    "@prisma/client": "5.7.0",
+    "@prisma/client": "5.7.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -31,21 +31,21 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tanstack/react-query": "^5.12.1",
-    "@tanstack/react-table": "^8.10.7",
+    "@tanstack/react-query": "^5.14.2",
+    "@tanstack/react-table": "^8.11.0",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "jotai": "^2.6.0",
-    "lucide-react": "^0.292.0",
-    "next": "14.0.5-canary.18",
+    "lucide-react": "^0.298.0",
+    "next": "14.0.5-canary.19",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.48.2",
-    "tailwind-merge": "^2.0.0",
+    "react-hook-form": "^7.49.2",
+    "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
@@ -53,20 +53,20 @@
     "@faker-js/faker": "^8.3.1",
     "@swc-jotai/react-refresh": "^0.1.0",
     "@tanstack/eslint-plugin-query": "^5.12.1",
-    "@types/node": "^20.10.0",
-    "@types/react": "^18.2.38",
-    "@types/react-dom": "^18.2.17",
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.54.0",
-    "eslint-config-next": "14.0.4-canary.9",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-prettier": "^5.1.0",
     "eslint-plugin-react": "^7.33.2",
-    "postcss": "^8.4.31",
+    "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
-    "prisma": "5.7.0",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.3.2"
+    "prisma": "5.7.1",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3"
   }
 }
