--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,13 +4,13 @@
   "rules": {
     "semi": "off",
     "quotes": "off",
-    "comma-dangle": ["error", {
-      "arrays": "always-multiline",
-      "objects": "always-multiline",
-      "imports": "always-multiline",
-      "functions": "never"
-    }],
-    "prettier/prettier": "warn",
+    "comma-dangle": ["error", "always-multiline"],
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
     "react/react-in-jsx-scope": "off",
     "react/jsx-props-no-spreading": "off",
     "react/forbid-prop-types": "off",
