--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "bug-tracker",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "scripts": {
     "dev": "next dev",
     "dev:turbo": "next dev --turbo",
@@ -9,10 +12,12 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --check --ignore-path .gitignore .",
-    "format:fix": "prettier --write --ignore-path .gitignore ."
+    "format:fix": "prettier --write --ignore-path .gitignore .",
+    "seed": "prisma db seed"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.11",
+    "@faker-js/faker": "^8.3.1",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.2",
@@ -31,26 +36,31 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.14.2",
-    "@tanstack/react-table": "^8.11.0",
+    "@tanstack/react-table": "^8.11.2",
     "@types/bcrypt": "^5.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "eslint-plugin-import": "^2.29.1",
     "jotai": "^2.6.0",
     "lucide-react": "^0.298.0",
-    "next": "14.0.5-canary.19",
+    "next": "14.0.5-canary.36",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.3.1",
     "@swc-jotai/react-refresh": "^0.1.0",
     "@tanstack/eslint-plugin-query": "^5.12.1",
     "@types/node": "^20.10.5",
@@ -67,6 +77,8 @@
     "prettier-plugin-tailwindcss": "^0.5.9",
     "prisma": "5.7.1",
     "tailwindcss": "^3.4.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
 }
