--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
@@ -43,15 +44,18 @@
     "@types/bcrypt": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
+    "@uiw/react-color": "^2.0.5",
+    "@uiw/react-color-block": "^2.0.5",
+    "@uiw/react-color-circle": "^2.0.5",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "eslint-plugin-import": "^2.29.1",
-    "jotai": "^2.6.0",
     "lucide-react": "^0.298.0",
-    "next": "14.0.5-canary.36",
+    "next": "14.0.5-canary.46",
     "next-auth": "^4.24.5",
+    "radash": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
