--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev:turbo": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint && npx oxlint",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
     "seed": "prisma db seed"
@@ -53,13 +53,15 @@
     "cmdk": "^0.2.0",
     "eslint-plugin-import": "^2.29.1",
     "lucide-react": "^0.298.0",
-    "next": "14.0.5-canary.55",
+    "next": "14.1.0",
     "next-auth": "^4.24.5",
+    "next-themes": "^0.2.1",
     "radash": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "server-only": "^0.0.1",
+    "sonner": "^1.3.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
@@ -74,8 +76,10 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-oxlint": "^0.2.0",
     "eslint-plugin-prettier": "^5.1.0",
     "eslint-plugin-react": "^7.33.2",
+    "oxlint": "^0.2.0",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
