--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "cmdk": "^0.2.0",
     "eslint-plugin-import": "^2.29.1",
     "lucide-react": "^0.298.0",
-    "next": "14.1.0",
+    "next": "14.1.1-canary.25",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "radash": "^11.0.0",
