--- a/package.json
+++ b/package.json
@@ -41,20 +41,20 @@
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.14.2",
     "@tanstack/react-table": "^8.11.2",
-    "@types/bcrypt": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "@uiw/react-color": "^2.0.5",
     "@uiw/react-color-block": "^2.0.5",
     "@uiw/react-color-circle": "^2.0.5",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "eslint-plugin-import": "^2.29.1",
     "lucide-react": "^0.298.0",
-    "next": "14.1.1-canary.27",
-    "next-auth": "^4.24.5",
+    "next": "14.1.1-canary.36",
+    "next-auth": "5.0.0-beta.5",
     "next-themes": "^0.2.1",
     "radash": "^11.0.0",
     "react": "^18.2.0",
@@ -69,6 +69,8 @@
   "devDependencies": {
     "@swc-jotai/react-refresh": "^0.1.0",
     "@tanstack/eslint-plugin-query": "^5.12.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
