--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.2",
-    "@prisma/client": "5.8.0",
+    "@prisma/client": "5.9.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -39,7 +39,6 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
-    "@tanstack/react-query": "^5.14.2",
     "@tanstack/react-table": "^8.11.2",
     "@types/bcrypt": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
@@ -53,13 +52,15 @@
     "cmdk": "^0.2.0",
     "eslint-plugin-import": "^2.29.1",
     "lucide-react": "^0.298.0",
-    "next": "14.1.1-canary.27",
+    "luxon": "^3.4.4",
+    "next": "14.1.1-canary.44",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "radash": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-merge-refs": "^2.1.1",
     "server-only": "^0.0.1",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.1.0",
@@ -69,6 +70,7 @@
   "devDependencies": {
     "@swc-jotai/react-refresh": "^0.1.0",
     "@tanstack/eslint-plugin-query": "^5.12.1",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
@@ -83,7 +85,7 @@
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
-    "prisma": "5.8.0",
+    "prisma": "5.9.1",
     "tailwindcss": "^3.4.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.0",
