--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "dev": "next dev",
-    "dev:turbo": "next dev --turbo",
+    "harddev": "rm -fr .next && next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint && npx oxlint",
@@ -53,7 +53,7 @@
     "eslint-plugin-import": "^2.29.1",
     "lucide-react": "^0.298.0",
     "luxon": "^3.4.4",
-    "next": "14.1.1-canary.44",
+    "next": "14.1.1-canary.73",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "radash": "^11.0.0",
