--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bug-tracker",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -10,18 +11,20 @@
     "harddev": "rm -fr .next && next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint && npx oxlint",
+    "lint": "pnpx oxlint && pnpm eslint && next lint",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
     "seed": "prisma db seed"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.11",
-    "@faker-js/faker": "^8.3.1",
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.1.1",
-    "@hookform/resolvers": "^3.3.2",
-    "@prisma/client": "5.9.1",
+    "@auth/prisma-adapter": "^2.2.0",
+    "@conform-to/react": "^1.1.4",
+    "@conform-to/zod": "^1.1.4",
+    "@faker-js/faker": "^8.4.1",
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.3",
+    "@hookform/resolvers": "^3.6.0",
+    "@prisma/client": "^5.15.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -31,66 +34,71 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
-    "@tanstack/react-table": "^8.11.2",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0",
-    "@uiw/react-color": "^2.0.5",
-    "@uiw/react-color-block": "^2.0.5",
-    "@uiw/react-color-circle": "^2.0.5",
+    "@tailwindcss/typography": "^0.5.13",
+    "@tanstack/react-table": "^8.17.3",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
+    "@uiw/react-color": "^2.3.0",
+    "@uiw/react-color-block": "^2.3.0",
+    "@uiw/react-color-circle": "^2.3.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "cmdk": "^0.2.0",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "eslint-plugin-import": "^2.29.1",
-    "lucide-react": "^0.298.0",
+    "framer-motion": "^11.2.10",
+    "jotai": "^2.8.3",
+    "lucide-react": "^0.394.0",
     "luxon": "^3.4.4",
-    "next": "14.1.1-canary.73",
-    "next-auth": "5.0.0-beta.5",
-    "next-themes": "^0.2.1",
-    "radash": "^11.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.2",
+    "next": "14.1.0",
+    "next-auth": "5.0.0-beta.19",
+    "next-safe-action": "^7.0.2",
+    "next-themes": "^0.3.0",
+    "radash": "^12.1.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-hook-form": "^7.51.5",
     "react-merge-refs": "^2.1.1",
     "server-only": "^0.0.1",
-    "sonner": "^1.3.1",
-    "tailwind-merge": "^2.1.0",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@swc-jotai/react-refresh": "^0.1.0",
-    "@tanstack/eslint-plugin-query": "^5.12.1",
-    "@types/luxon": "^3.4.2",
+    "@tanstack/eslint-plugin-query": "^5.43.1",
     "@types/bcrypt": "^5.0.2",
-//    "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/luxon": "^3.4.2",
+    "@types/node": "^20.14.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^9.4.0",
+    "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-oxlint": "^0.2.0",
-    "eslint-plugin-prettier": "^5.1.0",
-    "eslint-plugin-react": "^7.33.2",
-    "oxlint": "^0.2.0",
-    "postcss": "^8.4.32",
-    "prettier": "^3.1.1",
-    "prettier-plugin-tailwindcss": "^0.5.9",
-    "prisma": "5.9.1",
-    "tailwindcss": "^3.4.0",
+    "eslint-plugin-oxlint": "^0.4.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.2",
+    "oxlint": "^0.4.3",
+    "postcss": "^8.4.38",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.3",
+    "prisma": "^5.15.0",
+    "tailwindcss": "^3.4.4",
     "ts-node": "^10.9.2",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "tsx": "^4.15.2",
+    "typescript": "^5.4.5"
   }
 }
