--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
   "semi": false,
   "trailingComma": "all",
+  "printWidth": 110,
   "tabWidth": 2,
   "singleQuote": false,
   "jsxSingleQuote": false,
