--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@uiw/react-color": "^2.3.0",
     "@uiw/react-color-block": "^2.3.0",
     "@uiw/react-color-circle": "^2.3.0",
+    "@zenstackhq/runtime": "2.2.3",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -99,6 +100,7 @@
     "tailwindcss": "^3.4.4",
     "ts-node": "^10.9.2",
     "tsx": "^4.15.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "zenstack": "2.2.3"
   }
 }
