--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.1",
+    "@blocknote/ariakit": "^0.14.6",
+    "@blocknote/core": "^0.14.5",
+    "@blocknote/react": "^0.14.6",
     "@faker-js/faker": "^8.4.1",
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
