--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@auth/prisma-adapter": "^2.4.1",
     "@blocknote/ariakit": "^0.14.6",
     "@blocknote/core": "^0.14.5",
+    "@blocknote/mantine": "^0.14.6",
     "@blocknote/react": "^0.14.6",
     "@faker-js/faker": "^8.4.1",
     "@headlessui/react": "^2.1.1",
