--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "seed": "tsx prisma/seed.ts"
   },
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
-    "harddev": "rm -fr .next && next dev --turbo",
+    "dev": "next dev --turbo",
+    "dev:debug": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "pnpx oxlint && pnpm eslint && next lint",
@@ -26,7 +26,8 @@
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
     "@hookform/resolvers": "^3.6.0",
-    "@lexical/react": "^0.16.0",
+    "@lexical/markdown": "^0.16.1",
+    "@lexical/react": "^0.16.1",
     "@prisma/client": "^5.15.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -55,7 +56,6 @@
     "@uiw/react-color-block": "^2.3.0",
     "@uiw/react-color-circle": "^2.3.0",
     "@zenstackhq/runtime": "^2.3.3",
-    "babel-plugin-react-compiler": "^0.0.0-experimental-696af53-20240625",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -63,8 +63,7 @@
     "cmdk": "^1.0.0",
     "eslint-plugin-import": "^2.29.1",
     "framer-motion": "^11.2.11",
-    "jotai": "^2.8.3",
-    "lexical": "^0.16.0",
+    "lexical": "^0.16.1",
     "lucide-react": "^0.396.0",
     "luxon": "^3.4.4",
     "next": "^14.2.5",
@@ -83,10 +82,10 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@swc-jotai/react-refresh": "^0.1.1",
     "@tanstack/eslint-plugin-query": "^5.43.1",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/bun": "latest",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.14.7",
     "@types/react": "^18.3.3",
@@ -108,6 +107,8 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.15.7",
     "typescript": "5.4.5",
+    "use-debounce": "^10.0.2",
     "zenstack": "^2.3.3"
-  }
+  },
+  "module": "index.ts"
 }
