--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="this is a secret"
+AUTH_SECRET="this is a secret"
 DATABASE_URL="postgresql://postgres:<fill here>"
 API_URL="http://localhost:3000/api/"
 NEXT_URL="http://localhost:3000"
