--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "@vercel/style-guide/typescript/node20",
   "compilerOptions": {
     "target": "es2022",
     "lib": ["dom", "dom.iterable", "esnext"],
@@ -31,7 +32,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "prisma/seed.ts"
-, "tailwind.config.ts"  ],
+    "prisma/seed.ts", 
+    "tailwind.config.ts"
+  ],
   "exclude": ["node_modules"]
 }
