--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "type": "module",
   "private": true,
+  "prettier": "@vercel/style-guide/prettier",
   "prisma": {
     "seed": "tsx prisma/seed.ts"
   },
@@ -11,13 +12,13 @@
     "dev:debug": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "zenstack generate && next build",
     "start": "next start",
-    "lint": "pnpx oxlint && pnpm eslint && next lint",
+    "lint": "pnpm eslint && next lint",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
     "seed": "prisma db seed"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.4.1",
+    "@auth/prisma-adapter": "^2.4.2",
     "@blocknote/ariakit": "^0.14.6",
     "@blocknote/core": "^0.14.5",
     "@blocknote/mantine": "^0.14.6",
@@ -28,7 +29,7 @@
     "@hookform/resolvers": "^3.6.0",
     "@lexical/markdown": "^0.16.1",
     "@lexical/react": "^0.16.1",
-    "@prisma/client": "^5.15.1",
+    "@prisma/client": "^5.18.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.0",
@@ -55,13 +56,12 @@
     "@uiw/react-color": "^2.3.0",
     "@uiw/react-color-block": "^2.3.0",
     "@uiw/react-color-circle": "^2.3.0",
-    "@zenstackhq/runtime": "^2.3.3",
+    "@zenstackhq/runtime": "^2.4.1",
     "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3", 
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "eslint-plugin-import": "^2.29.1",
     "framer-motion": "^11.2.11",
     "lexical": "^0.16.1",
     "lucide-react": "^0.396.0",
@@ -70,6 +70,7 @@
     "next-auth": "5.0.0-beta.18",
     "next-safe-action": "^7.1.0",
     "next-themes": "^0.3.0",
+    "nuqs": "^1.17.8",
     "radash": "^12.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -91,25 +92,24 @@
     "@types/node": "^20.14.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@vercel/style-guide": "^6.0.0",
     "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-oxlint": "^0.5.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.3",
-    "oxlint": "^0.5.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "prisma": "^5.15.1",
+    "prettier-plugin-tailwindcss": "^0.6.6",
+    "prisma": "^5.18.0",
     "tailwindcss": "^3.4.4",
     "ts-node": "^10.9.2",
     "tsx": "^4.15.7",
     "typescript": "5.4.5",
     "use-debounce": "^10.0.2",
-    "zenstack": "^2.3.3"
+    "zenstack": "^2.4.1"
   },
   "module": "index.ts"
 }
