Replacee the rest of logic to use supabase over nextauth

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 NEXTAUTH_URL="http://localhost:3000"
-AUTH_SECRET="this is a secret"
 DATABASE_URL="postgresql://postgres:<fill here>"
 API_URL="http://localhost:3000/api/"
 NEXT_URL="http://localhost:3000"
+NEXT_PUBLIC_SUPABASE_URL="https://<fill here>.supabase.co"
+SUPABASE_SERVICE_ROLE_KEY=""
+
+# .env.local
+TEST_DATABASE_URL=""
