--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.1",
+    "@supabase/ssr": "^0.5.0",
+    "@supabase/supabase-js": "^2.45.1",
+    "@t3-oss/env-nextjs": "^0.11.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
@@ -66,7 +69,6 @@
     "lucide-react": "^0.396.0",
     "luxon": "^3.4.4",
     "next": "^14.2.5",
-    "next-auth": "5.0.0-beta.18",
     "next-safe-action": "^7.1.0",
     "next-themes": "^0.3.0",
     "nuqs": "^1.17.8",
